Closed
Bug 1736393
Opened 4 years ago
Closed 4 years ago
Lines in Tibetan text do not wrap properly on Windows
Categories
(Core :: Internationalization, defect)
Tracking
()
RESOLVED
FIXED
95 Branch
Tracking | Status | |
---|---|---|
firefox95 | --- | fixed |
People
(Reporter: jfkthame, Assigned: jfkthame)
References
()
Details
Attachments
(1 file)
STR: view a Tibetan page such as https://bo.wikipedia.org/wiki/%E0%BD%96%E0%BD%BC%E0%BD%91%E0%BC%8B%E0%BD%A1%E0%BD%B4%E0%BD%A3%E0%BC%8D in Firefox on Windows.
Expected: lines of text should wrap nicely into paragraphs.
Actual: they don't; we wrap only at ends of sentences.
This is because we rely on ScriptBreak to find potential line-breaks, but it doesn't adequately support Tibetan. We'd do better to handle it the same way we do on Android (since bug 1647377), by just treating each tscheg character as a potential break position, and not route Tibetan text through ScriptBreak at all.
(This will be superseded by the Unified Segmenter work when ready, but in the meantime it improves rendering and avoids win32k-lockdown issues.)
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/155f07d80dc5
Don't use ScriptBreak for Tibetan, just treat Tsheg character like a hyphen instead. r=m_kato
Comment 3•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox95:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•