Bug 1736393 - Don't use ScriptBreak for Tibetan, just treat Tsheg character like a hyphen instead. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D128756